--- a/C++/C++ Primer Plus/第二章/0002-example2.2-carrot/0002-example2.2-carrot.vcxproj.filters
+++ b/C++/C++ Primer Plus/第二章/0002-example2.2-carrot/0002-example2.2-carrot.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="0001-example2.1-first.c">
+    <ClCompile Include="..\..\..\..\..\..\note\0002-example2.2-carrot.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
