--- a/C++/C++ Primer Plus/第三章/example3.1-limits/example3.1-limits/example3.1-limits.vcxproj.filters
+++ b/C++/C++ Primer Plus/第三章/example3.1-limits/example3.1-limits/example3.1-limits.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="0002-example2.2-carrot.cpp">
+    <ClCompile Include="example3.1-limits.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
